2007-06-28  Rob Buis  <buis@kde.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=14373
        CSS1: selectors (classes and IDs) cannot start with a dash or with a digit

        Make sure the id selector validates against the CSS2.1 identfier
        definition, not the hexcolor/HASH definition.

        * css/CSSGrammar.y:
        * css/cssparser.cpp:
        (WebCore::CSSParser::lex):
        (WebCore::CSSParser::text):
        * css/tokenizer.flex:

2007-06-28  Simon Hausmann  <hausmann@kde.org>

        Reviewed by Zack.

        Implemented PasteboardQt::writeSelection to copy the selected text into the Clipboard as well as PasteboardQt::plainText to retrieve plain text from the clipboard for pasting for example into form fields.

        * platform/qt/PasteboardQt.cpp:
        (WebCore::Pasteboard::writeSelection):

2007-06-28  Antti Koivisto  <antti@apple.com>

        Reviewed by Mitz.
        
        Fix http://bugs.webkit.org/show_bug.cgi?id=14332
        Bug 14332: REGRESSION (r21145): <td> width ignored
        <rdar://problem/5290123>
        
        Cells in table with non-zero cellpadding are not considered empty.

        * rendering/AutoTableLayout.cpp:
        (WebCore::AutoTableLayout::recalcColumn):

2007-06-28  Adam Roben  <aroben@apple.com>

        Fix <rdar://problem/5300455> Prefast: typo in RenderBlock::paintObject

        Reviewed by Hyatt.

        No layout test possible, as this bug didn't have any effect since
        "bool & bool" has the same value as "bool && bool"

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paintObject): Changed & to &&.

2007-06-28  Adam Roben  <aroben@apple.com>

        Fix <rdar://problem/5300443> word-break and -webkit-user-modify allow any value

        The bug was caused by two typos found by prefast.

        Reviewed by Hyatt.

        * css/cssparser.cpp:
        (WebCore::CSSParser::parseValue): Fixed typos.
