@@ -1,3 +1,15 @@
+2007-06-28  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Oliver.
+
+        <rdar://problem/5234139>
+        <object> with PNG src rendered as image document.
+        
+        Complete the URL before passing it to the frame loader client.
+        
+        * html/HTMLObjectElement.cpp:
+        (WebCore::HTMLObjectElement::isImageType):
+
 2007-06-28  Rob Buis  <buis@kde.org>
 
         Reviewed by Maciej.
